--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "bindings": "~1.0.0",
     "nan": "~0.8.0",
+    "bignum" :"~0.7.0",
     "request": "~2.30.0"
   },
   "devDependencies": {
